--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-nav img{
-    width: 200px;
+nav .logoImage{
+    width: 220px;
 }
+
 .nav-links{
     flex: 1;
     text-align: right;
@@ -59,7 +60,7 @@ nav img{
     text-align:center;
 }
 .text-box h1{
-    font-size: 62px;
+    font-size: 40px;
 }
 .text-box p{
     margin: 10px 0 40px;
@@ -71,15 +72,107 @@ nav img{
     display: inline-block;
     text-decoration: none;
     color: #fff;
-    border: 1px solid #fff;
+    border: 2px solid #d7ba1b;
+    border-radius: 30px;
     padding: 12px 34px;
-    font-size: 13px;
+    font-size: 20px;
     background: transparent;
     position: relative;
     cursor: pointer;
 }
 .visit-btn:hover{
-    border: 1px solid #d7ba1b;
-    background: #d7ba1b;
+    background: #d7bb1b96;
     transition: 0.5s;
+}
+
+nav .closeIcon{
+    display: none;
+}
+nav .menuIcon{
+    display: none;
+}
+
+@media(max-width: 700px){ /*making responsive in smaller screens*/
+    .text-box h1{
+        font-size: 20px;
+    }
+    .nav-links ul li{ /*this part is adding all nav links into a menu in smaller screens*/
+        display: block;
+    }
+    .nav-links{
+        position: absolute;
+        background: #d7ba1b;
+        height: 100vh;
+        width: 150px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 0.5s;
+    }
+    .nav-links .closeIcon{
+        display: block;
+        width: 40px;
+        margin: 10px;
+        cursor: pointer;
+    }
+
+    nav .menuIcon{
+        display: block;
+        width: 40px;
+        margin: 10px;
+        cursor: pointer;
+    }
+}
+
+/*------------- outsourcing -------------*/
+
+.outsourcing{
+    width: 90%;
+    margin: auto;
+    margin-top: 50px;
+    /*background: linear-gradient(to left, #d7d41b00 0%, #d7bb1b6b 10%, #d7d41bbb 50%, #d7bb1b6b 90%, #d7d41b00 100%);*/
+    background: #21709d67;
+    text-align: center;
+    padding-top: 50px;
+}
+.outsourcing h1{
+    font-size: 40px;
+    font-weight: 600;
+    color: rgb(7, 16, 53);
+}
+.outsourcing p{
+    font-size: 20px;
+    font-weight: 100;
+    padding: 10px;
+}
+.row{
+    margin: 35px;
+    margin-top: 3%;
+    display: flex;
+    justify-content: space-between;
+}
+.outsourcing-col{
+    flex-basis: 31%;
+    background: #ffffff;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    border: 2px solid #21709d;
+    transition: 0.2s;
+}
+.outsourcing-col:hover{
+    box-shadow: 0 0 20px 0px rgba(7, 16, 53, 0.795);
+}
+.h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+@media(max-width: 700px){
+    .row{
+        flex-direction: column;
+    }
 }
