--- a/style.css
+++ b/style.css
@@ -162,14 +162,59 @@ nav .menuIcon{
     border: 2px solid #21709d;
     transition: 0.2s;
 }
-.outsourcing-col:hover{
-    box-shadow: 0 0 20px 0px rgba(7, 16, 53, 0.795);
-}
+/*.outsourcing-col:hover{
+    box-shadow: 0 0 20px 0px rgba(7, 16, 53, 0.795); feio
+}*/
 .h3{
     text-align: center;
     font-weight: 600;
     margin: 10px 0;
 }
+
+.outsourcing-sliders{
+    width: 85vmin;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+    border: 20px solid #000000;
+    border-radius: 8px;
+}
+.slider-images{
+    width: 300%;
+    display: flex;
+}
+.slider-images img{
+    margin-top: 10px;
+    width: 100%;
+}
+/*@keyframes slide{
+    0%{
+        transform: translateX(0);
+    }
+    25%{
+        transform: translateX(0);
+    }
+    30%{
+        transform: translateX(-100%);
+    }
+    50%{
+        transform: translateX(-100%);
+    }
+    55%{
+        transform: translateX(-200%);
+    }
+    75%{
+        transform: translateX(-200%);
+    }
+    80%{
+        transform: translateX(-300%);
+    }
+    100%{
+        transform: translateX(-300%);
+    }
+}*/
 
 @media(max-width: 700px){
     .row{
