--- a/style.css
+++ b/style.css
@@ -172,24 +172,21 @@ nav .menuIcon{
 }
 
 .outsourcing-sliders{
-    width: 85vmin;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
+    width: 100%;
     overflow: hidden;
-    border: 20px solid #000000;
-    border-radius: 8px;
+    /*border: 20px solid #000000;
+    border-radius: 8px;*/
 }
 .slider-images{
-    width: 300%;
+    width: 400%;
     display: flex;
 }
 .slider-images img{
     margin-top: 10px;
     width: 100%;
+    animation: slide 16s infinite;
 }
-/*@keyframes slide{
+@keyframes slide{
     0%{
         transform: translateX(0);
     }
@@ -214,7 +211,7 @@ nav .menuIcon{
     100%{
         transform: translateX(-300%);
     }
-}*/
+}
 
 @media(max-width: 700px){
     .row{
